ubiscript/src/org/ubiscript/parser/UbiscriptParser.java
// $ANTLR 3.0.1 C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g 2008-05-11 14:25:43

package org.ubiscript.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class UbiscriptParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "EXPR", "BLOCK", "VARDEF", "FUNDEF", "IF", "FOR", "INIT", "VARS", "COND", "UPD", "FOREACH", "WHILE", "RETURN", "BREAK", "CONTINUE", "ON", "CALL", "ARGS", "INDEX", "FIELD", "FUN", "PARAMS", "UMINUS", "UPLUS", "NEW", "ARRAY", "DELETE", "TYPEOF", "COMMA", "EQ", "PLUSEQ", "MINUSEQ", "MULTEQ", "DIVEQ", "PERCENTEQ", "QUESTION", "OR", "AND", "EQ2", "NOTEQ", "LT", "LTEQ", "GT", "GTEQ", "PLUS", "MINUS", "MULT", "DIV", "PERCENT", "NOT", "MINUS2", "PLUS2", "ID", "NULL", "BOOLEAN", "INTEGER", "FLOAT", "STRING", "LETTER", "DIGIT", "EXPONENT", "ESC", "LINE_COMMENT", "WS", "';'", "'{'", "'}'", "'if'", "'('", "')'", "'else'", "'for'", "'var'", "'foreach'", "'in'", "'while'", "'function'", "'return'", "'break'", "'continue'", "'on'", "':'", "'delete'", "'typeof'", "'['", "']'", "'.'", "'new'"
    };
    public static final int EXPONENT=64;
    public static final int LT=44;
    public static final int WHILE=15;
    public static final int LETTER=62;
    public static final int ESC=65;
    public static final int DIVEQ=37;
    public static final int LTEQ=45;
    public static final int NEW=28;
    public static final int FOR=9;
    public static final int FLOAT=60;
    public static final int NOT=53;
    public static final int ID=56;
    public static final int AND=41;
    public static final int EOF=-1;
    public static final int BREAK=17;
    public static final int PLUSEQ=34;
    public static final int UPD=13;
    public static final int IF=8;
    public static final int INDEX=22;
    public static final int BOOLEAN=58;
    public static final int EXPR=4;
    public static final int CONTINUE=18;
    public static final int COMMA=32;
    public static final int RETURN=16;
    public static final int ARGS=21;
    public static final int PLUS=48;
    public static final int DIGIT=63;
    public static final int MINUS2=54;
    public static final int EQ=33;
    public static final int VARDEF=6;
    public static final int PLUS2=55;
    public static final int ARRAY=29;
    public static final int PARAMS=25;
    public static final int INTEGER=59;
    public static final int PERCENT=52;
    public static final int LINE_COMMENT=66;
    public static final int UPLUS=27;
    public static final int VARS=11;
    public static final int MULTEQ=36;
    public static final int NULL=57;
    public static final int ON=19;
    public static final int UMINUS=26;
    public static final int DELETE=30;
    public static final int MULT=50;
    public static final int MINUS=49;
    public static final int GTEQ=47;
    public static final int EQ2=42;
    public static final int NOTEQ=43;
    public static final int WS=67;
    public static final int QUESTION=39;
    public static final int PERCENTEQ=38;
    public static final int TYPEOF=31;
    public static final int FUNDEF=7;
    public static final int BLOCK=5;
    public static final int OR=40;
    public static final int GT=46;
    public static final int FIELD=23;
    public static final int FOREACH=14;
    public static final int CALL=20;
    public static final int DIV=51;
    public static final int FUN=24;
    public static final int COND=12;
    public static final int INIT=10;
    public static final int STRING=61;
    public static final int MINUSEQ=35;

        public UbiscriptParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[35+1];
         }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g"; }

    
    protected void mismatch(IntStream input, int ttype, BitSet follow) throws RecognitionException {
    	throw new MismatchedTokenException(ttype, input);
    }
    public void recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow) throws RecognitionException {
    	throw e;
    }


    public static class lineInput_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start lineInput
    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:61:1: lineInput : ( ( statement )=> statement | expression );
    public final lineInput_return lineInput() throws RecognitionException {
        lineInput_return retval = new lineInput_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        statement_return statement1 = null;

        expression_return expression2 = null;



        try {
            // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:62:2: ( ( statement )=> statement | expression )
            int alt1=2;
            alt1 = dfa1.predict(input);
            switch (alt1) {
                case 1 :
                    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:62:4: ( statement )=> statement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_statement_in_lineInput172);
                    statement1=statement();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, statement1.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:63:4: expression
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_expression_in_lineInput177);
                    expression2=expression();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, expression2.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        
        catch (RecognitionException e) {
        	throw e;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end lineInput

    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start program
    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:66:1: program : ( statement )* -> ^( BLOCK ( statement )* ) ;
    public final program_return program() throws RecognitionException {
        program_return retval = new program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        statement_return statement3 = null;


        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:67:2: ( ( statement )* -> ^( BLOCK ( statement )* ) )
            // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:67:4: ( statement )*
            {
            // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:67:4: ( statement )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=PLUS && LA2_0<=MINUS)||(LA2_0>=NOT && LA2_0<=STRING)||(LA2_0>=68 && LA2_0<=69)||(LA2_0>=71 && LA2_0<=72)||(LA2_0>=75 && LA2_0<=77)||(LA2_0>=79 && LA2_0<=84)||(LA2_0>=86 && LA2_0<=88)||LA2_0==91) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:67:4: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_program188);
            	    statement3=statement();
            	    _fsp--;
            	    if (failed) return retval;
            	    if ( backtracking==0 ) stream_statement.add(statement3.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 68:3: -> ^( BLOCK ( statement )* )
            {
                // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:68:6: ^( BLOCK ( statement )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(adaptor.create(BLOCK, "BLOCK"), root_1);

                // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:68:14: ( statement )*
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_1, stream_statement.next());

                }
                stream_statement.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            }

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        
        catch (RecognitionException e) {
        	throw e;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end program

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start statement
    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:71:1: statement : ( emptyStatement | expressionStatement | block | ifStatement | iterationStatement | variableStatement | functionStatement | jumpStatement | onStatement );
    public final statement_return statement() throws RecognitionException {
        statement_return retval = new statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        emptyStatement_return emptyStatement4 = null;

        expressionStatement_return expressionStatement5 = null;

        block_return block6 = null;

        ifStatement_return ifStatement7 = null;

        iterationStatement_return iterationStatement8 = null;

        variableStatement_return variableStatement9 = null;

        functionStatement_return functionStatement10 = null;

        jumpStatement_return jumpStatement11 = null;

        onStatement_return onStatement12 = null;



        try {
            // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:72:2: ( emptyStatement | expressionStatement | block | ifStatement | iterationStatement | variableStatement | functionStatement | jumpStatement | onStatement )
            int alt3=9;
            switch ( input.LA(1) ) {
            case 68:
                {
                alt3=1;
                }
                break;
            case PLUS:
            case MINUS:
            case NOT:
            case MINUS2:
            case PLUS2:
            case ID:
            case NULL:
            case BOOLEAN:
            case INTEGER:
            case FLOAT:
            case STRING:
            case 72:
            case 86:
            case 87:
            case 88:
            case 91:
                {
                alt3=2;
                }
                break;
            case 80:
                {
                int LA3_3 = input.LA(2);

                if ( (LA3_3==72) ) {
                    alt3=2;
                }
                else if ( (LA3_3==ID) ) {
                    alt3=7;
                }
                else {
                    if (backtracking>0) {failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("71:1: statement : ( emptyStatement | expressionStatement | block | ifStatement | iterationStatement | variableStatement | functionStatement | jumpStatement | onStatement );", 3, 3, input);

                    throw nvae;
                }
                }
                break;
            case 69:
                {
                alt3=3;
                }
                break;
            case 71:
                {
                alt3=4;
                }
                break;
            case 75:
            case 77:
            case 79:
                {
                alt3=5;
                }
                break;
            case 76:
                {
                alt3=6;
                }
                break;
            case 81:
            case 82:
            case 83:
                {
                alt3=8;
                }
                break;
            case 84:
                {
                alt3=9;
                }
                break;
            default:
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("71:1: statement : ( emptyStatement | expressionStatement | block | ifStatement | iterationStatement | variableStatement | functionStatement | jumpStatement | onStatement );", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:72:4: emptyStatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_emptyStatement_in_statement211);
                    emptyStatement4=emptyStatement();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, emptyStatement4.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:73:4: expressionStatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_expressionStatement_in_statement216);
                    expressionStatement5=expressionStatement();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, expressionStatement5.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:74:4: block
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_block_in_statement221);
                    block6=block();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, block6.getTree());

                    }
                    break;
                case 4 :
                    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:75:4: ifStatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_ifStatement_in_statement226);
                    ifStatement7=ifStatement();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, ifStatement7.getTree());

                    }
                    break;
                case 5 :
                    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:76:4: iterationStatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_iterationStatement_in_statement231);
                    iterationStatement8=iterationStatement();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, iterationStatement8.getTree());

                    }
                    break;
                case 6 :
                    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:77:4: variableStatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_variableStatement_in_statement236);
                    variableStatement9=variableStatement();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, variableStatement9.getTree());

                    }
                    break;
                case 7 :
                    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:78:4: functionStatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_functionStatement_in_statement241);
                    functionStatement10=functionStatement();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, functionStatement10.getTree());

                    }
                    break;
                case 8 :
                    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:79:4: jumpStatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_jumpStatement_in_statement246);
                    jumpStatement11=jumpStatement();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, jumpStatement11.getTree());

                    }
                    break;
                case 9 :
                    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:80:4: onStatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_onStatement_in_statement251);
                    onStatement12=onStatement();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, onStatement12.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        
        catch (RecognitionException e) {
        	throw e;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end statement

    public static class emptyStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start emptyStatement
    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:83:1: emptyStatement : ';' ;
    public final emptyStatement_return emptyStatement() throws RecognitionException {
        emptyStatement_return retval = new emptyStatement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal13=null;

        Object char_literal13_tree=null;

        try {
            // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:84:2: ( ';' )
            // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:84:4: ';'
            {
            root_0 = (Object)adaptor.nil();

            char_literal13=(Token)input.LT(1);
            match(input,68,FOLLOW_68_in_emptyStatement263); if (failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        
        catch (RecognitionException e) {
        	throw e;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end emptyStatement

    public static class expressionStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start expressionStatement
    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:87:1: expressionStatement : expression ';' -> ^( EXPR expression ) ;
    public final expressionStatement_return expressionStatement() throws RecognitionException {
        expressionStatement_return retval = new expressionStatement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal15=null;
        expression_return expression14 = null;


        Object char_literal15_tree=null;
        RewriteRuleTokenStream stream_68=new RewriteRuleTokenStream(adaptor,"token 68");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        try {
            // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:88:2: ( expression ';' -> ^( EXPR expression ) )
            // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:88:4: expression ';'
            {
            pushFollow(FOLLOW_expression_in_expressionStatement275);
            expression14=expression();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) stream_expression.add(expression14.getTree());
            char_literal15=(Token)input.LT(1);
            match(input,68,FOLLOW_68_in_expressionStatement277); if (failed) return retval;
            if ( backtracking==0 ) stream_68.add(char_literal15);


            // AST REWRITE
            // elements: expression
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 89:3: -> ^( EXPR expression )
            {
                // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:89:6: ^( EXPR expression )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(adaptor.create(EXPR, "EXPR"), root_1);

                adaptor.addChild(root_1, stream_expression.next());

                adaptor.addChild(root_0, root_1);
                }

            }

            }

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        
        catch (RecognitionException e) {
        	throw e;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end expressionStatement

    public static class block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start block
    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:92:1: block : '{' ( statement )* '}' -> ^( BLOCK ( statement )* ) ;
    public final block_return block() throws RecognitionException {
        block_return retval = new block_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal16=null;
        Token char_literal18=null;
        statement_return statement17 = null;


        Object char_literal16_tree=null;
        Object char_literal18_tree=null;
        RewriteRuleTokenStream stream_69=new RewriteRuleTokenStream(adaptor,"token 69");
        RewriteRuleTokenStream stream_70=new RewriteRuleTokenStream(adaptor,"token 70");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:93:2: ( '{' ( statement )* '}' -> ^( BLOCK ( statement )* ) )
            // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:93:4: '{' ( statement )* '}'
            {
            char_literal16=(Token)input.LT(1);
            match(input,69,FOLLOW_69_in_block299); if (failed) return retval;
            if ( backtracking==0 ) stream_69.add(char_literal16);

            // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:93:8: ( statement )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( ((LA4_0>=PLUS && LA4_0<=MINUS)||(LA4_0>=NOT && LA4_0<=STRING)||(LA4_0>=68 && LA4_0<=69)||(LA4_0>=71 && LA4_0<=72)||(LA4_0>=75 && LA4_0<=77)||(LA4_0>=79 && LA4_0<=84)||(LA4_0>=86 && LA4_0<=88)||LA4_0==91) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // C:\\Documents and Settings\\niklaus\\workspace\\ubiscript\\src\\org\\ubiscript\\parser\\Ubiscript.g:93:8: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_block301);
            	    statement17=statement();
            	    _fsp--;
            	    if (failed) return retval;
            	    if ( backtracking==0 ) stream_statement.add(statement17.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            char_literal18=(Token)input.LT(1);
            match(input,70,FOLLOW_70_in_block304); if (failed) return retval;
            if ( backtracking==0 ) stream_70.add(char_literal18);

